--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bubblegum-dark-syntax",
   "theme": "syntax",
   "version": "0.0.0",
-  "description": "A short description of your syntax theme",
+  "description": "An Atom syntax theme with delicious bubblegum colors",
   "keywords": [
     "bubblegum",
     "dark",
